--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sentry/nextjs": "^7.93.0",
     "@studio-freight/react-lenis": "^0.0.43",
     "@tanstack/react-query": "^5.45.1",
@@ -34,6 +35,7 @@
     "formik": "^2.4.3",
     "framer-motion": "^10.12.12",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.468.0",
     "next": "^14.2.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
@@ -45,6 +47,8 @@
     "react-use": "^17.4.0",
     "react-use-measure": "^2.1.1",
     "swiper": "^11.0.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
   },
