--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-project",
+  "name": "drsarha-edu-admin",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -16,8 +16,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
     "@popperjs/core": "^2.11.8",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@sentry/nextjs": "^7.93.0",
     "@studio-freight/react-lenis": "^0.0.43",
     "@tanstack/react-query": "^5.45.1",
@@ -40,6 +51,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.4.3",
     "react-merge-refs": "^2.1.1",
@@ -50,7 +62,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
