--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint": "next lint",
     "test": "lint-staged",
     "format": "prettier --check .",
-    "format:fix": "prettier --write --list-different .",
-    "prepare": "husky install"
+    "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
@@ -76,8 +75,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.0.2",
     "npm": "^10.3.0",
     "postcss": "^8.4.26",
     "postcss-hover-media-feature": "^1.0.2",
@@ -89,11 +86,6 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animation-delay": "^1.0.7",
     "tailwindcss-aspect-ratio": "^3.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
