--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --experimental-debug-memory-usage && npm run lint && npm run format:fix",
-    "start": "NODE_OPTIONS=--inspect next start",
+    "start": "NODE_OPTIONS=--inspect next start -p 3006", 
     "lint": "next lint",
     "test": "lint-staged",
     "format": "prettier --check .",
