--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --experimental-debug-memory-usage && npm run lint && npm run format:fix",
-    "start": "NODE_OPTIONS=--inspect next start -p 3006", 
+    "start": "NODE_OPTIONS=--inspect next start -p 3006",
     "lint": "next lint",
     "test": "lint-staged",
     "format": "prettier --check .",
     "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.0.0",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -27,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@sentry/nextjs": "^7.93.0",
     "@studio-freight/react-lenis": "^0.0.43",
@@ -57,6 +61,7 @@
     "react-textarea-autosize": "^8.5.3",
     "react-use": "^17.4.0",
     "react-use-measure": "^2.1.1",
+    "sonner": "^1.7.4",
     "swiper": "^11.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
