--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.0.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -65,6 +67,7 @@
     "react-use-measure": "^2.1.1",
     "sonner": "^1.7.4",
     "swiper": "^11.0.2",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
