--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-NEXT_PUBLIC_FRONT_BASE_URL=
-NEXT_PUBLIC_FRONT_API_URL='http://localhost:3001'
-NEXT_IMAGE_PREFIX='http://localhost:3001'
+NEXT_PUBLIC_FRONT_BASE_URL='http://localhost:3000'
+NEXT_PUBLIC_FRONT_API_URL='http://localhost:3000'
+NEXT_PUBLIC_IMAGE_PREFIX='http://localhost:3000/public'
 NEXT_PUBLIC_FRONT_PROXY_API_URL='/api/proxy'
 NEXT_PUBLIC_BASIC_AUTH_LOGIN='admin'
 NEXT_PUBLIC_BASIC_AUTH_PASSWORD='adminpass'
 UNOPTIMIZED_IMAGES=0
+API_BASE_URL='http://localhost:3000'
